--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
 
 
 
-    <meta name="description" content="Release Documentation - one">
+    <meta name="description" content="Release Documentation - two">
 
 
 
@@ -58,7 +58,7 @@
         <a class="gdoc-header__link" href="https://fantastic-fiesta-da4ab8e5.pages.github.io/">
             <span class="gdoc-brand flex align-center">
                 <img class="gdoc-brand__img" src="/brand.svg" alt="">
-                <span class="gdoc-brand__title">Release Documentation - one</span>
+                <span class="gdoc-brand__title">Release Documentation - two</span>
             </span>
         </a>
         <div class="gdoc-menu-header">
